refactor: 컬렉션 dto 단일화